--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 <hr>
 <footer>
     <h3>Contact Details</h3>
+    <P class="wcol"> Phone Number: 5552386</P>
+    <a class="wcol" href="mailto: Burger@example.com">Burger@example.com</a>
     <h3>About Us</h3>
 
 </footer>
