--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <h3>Contact Details</h3>
     <P class="wcol"> Phone Number: 5552386</P>
     <a class="wcol" href="mailto: Burger@example.com">Burger@example.com</a>
+    <address class="wcol"> 22 baker st</address>
     <h3>About Us</h3>
 
 </footer>
